基础信息数据状态

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -11,3 +11,12 @@
         border-width: 0;
     }
 }
+.yzwb-popup { 
+    width: 100%;
+    height: 100%;
+}
+.yzwb-panel {
+    .van-panel__header {
+        padding: 0;
+    }
+}
