--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,4 +1,7 @@
 @import 'vant/lib/vant-css/index.css';
+body {
+    background: #f5f5f5;
+}
 .yzwb-ksxx {
     .van-panel__header {
         background-color: #e8eaec;
@@ -18,5 +21,51 @@
 .yzwb-panel {
     .van-panel__header {
         padding: 0;
+    }
+}
+.yzwb-index-icon {
+    background: #fff;
+    text-align: center;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    .van-icon {
+        display: block;
+        font-size: 32px;
+        margin: 15px 0;
+        color: rgba(69, 90, 100, .8);
+    }
+}
+.van-cell {
+    font-size: 34px;
+    line-height: 48px;
+    padding: 24px;
+}
+.van-field .van-cell__title {
+    max-width: 180px;
+    span {
+        margin-right: 44px;
+    }
+}
+.yzwb-des {
+    font-size: 28px;
+    color: #999;
+    line-height: 42px;
+}
+.van-button {
+    border-radius: 4px;
+}
+.van-button--primary {
+    background-color: #2893E9;
+    border: 1px solid #2893E9;
+}
+.van-button--large {
+    height: 94px;
+    line-height: 92px;
+}
+.yzwb-bg {
+    .van-cell {
+        padding-top: 32px;
+        padding-bottom: 0;
+        background: #f5f5f5;
     }
 }
